# ZRX

./: CMakeLists.txt  README.md  run.bat
BCCircle/: CMakeLists.txt
BCCircle/inc/: BCAssocWatcher.h  BCCircle.h  BCCircleCopyRule.h  BCDimension.h  BCDimensionAssoc.h  BCEntityReactor.h  BCInputContextReactor.h  BCLineDimensionPE.h  BCPersistentReactor.h  dynblockReference.h  stdafx.h  widget.h
BCCircle/inc/chapter_13/: dbreactor.h  persreactor.h
BCCircle/inc/chapter_8/: customClass.h
BCCircle/src/: BCAssocWatcher.cpp  BCCircle.cpp  BCCircleCopyRule.cpp  BCDimension.cpp  BCDimensionAssoc.cpp  BCEntityReactor.cpp  BCInputContextReactor.cpp  BCLineDimensionPE.cpp  BCPersistentReactor.cpp  dynblockReference.cpp  main.cpp  widget.cpp
BCCircle/src/chapter_13/: dbreactor.cpp  persreactor.cpp
BCCircle/src/chapter_8/: customClass.cpp
BCCircle/ui/: form.ui
cmake/: UsefulFuncs.cmake
