cmake_minimum_required(VERSION 3.18)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

if(WIN32)
    set(CMAKE_SYSTEM_VERSION 10.0.17763.0)
    add_definitions(-DNOMINMAX -D_USE_MATH_DEFINES)
endif()

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake;${CMAKE_MODULE_PATH}")

project(ZRX LANGUAGES CXX)

include(UsefulFuncs)

set(zrxsdk_dir "D:/soft/ZWCAD_2025_1.2_ZRXSDK" CACHE PATH "Path to the ZRX SDK")
set(ZWCAD_INSTALL_PATH "D:/soft/ZWCAD 2025" CACHE PATH "Path to the ZWCAD")

message(STATUS "System processor: ${CMAKE_SYSTEM_PROCESSOR}")
message(STATUS "System name: ${CMAKE_SYSTEM_NAME}")
message(STATUS "Pointer size: ${CMAKE_SIZEOF_VOID_P}")
message(STATUS "Platform: ${CMAKE_VS_PLATFORM_NAME}")
message(STATUS "Using Windows SDK version: ${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION}")

if(MSVC)
    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT BCCircle)
endif()

add_subdirectory(BCCircle)
